# chainlite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_sync_stream.py  example.config.yaml  inspect_pydantic_ai.py  makefile  pyproject.toml  release-please-config.json  reproduce_history_access.py
.github/workflows/: ci.yml  pr-title.yml  release-please.yml  release.yml
chainlite/: __init__.py  _factories.py  _in_run_compaction.py  compaction.py  config.py  config_loader.py  core.py  history.py  provider.py  streaming.py  truncators.py  trunctors.py  usage_tracker.py
chainlite/adapters/: __init__.py  pydantic_ai.py
chainlite/utils/: __init__.py  async_utils.py  media.py  output_model.py  prompts.py
docs/: history.md  todo.md  tools.md
experiments/: README.md  ablation_token_usage.py
tests/: chat_agent.yaml  functional_test.py  integration_history_cli.py  interactive_chat.py  interactive_chat_tools_deps.py  manual_image_test.py  reproduce_async_error.py  reproduce_truncation.py  test_basic.yaml  test_deps_passthrough.py  test_history_export.py  test_history_truncation.py  test_image_url.py  test_in_run_compaction.py  test_jinja_prompt.py  test_lazy_summarization.py  test_model_settings.py  test_multimodal.py  test_pydantic_ai_adapter_boundaries.py  test_runtime_guards.py  test_streaming.py  test_structured.yaml  test_sub_agents.py  test_yaml_config.py  verification_refactor.py
tests/interactive/: integration_history_cli.py  interactive_chat.py  interactive_chat_tools_deps.py  interactive_chat_with_image.py  interactive_orchestrator.py  sync_chat.py
tests/prompts/: ce.yaml  chat_agent.yaml  custom_summarizer.yaml  integration_auto_summary_config.yaml  integration_custom_summary_config.yaml  integration_truncation_config.yaml  orchestrator.yaml  summarizer.yaml  test_basic.yaml  test_structured.yaml  translator.yaml
