[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "chainlite/_version.py"

[tool.setuptools]
packages = { find = { include = ["chainlite*"] } }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m \"not integration\""
markers = [
  "integration: tests that call real model providers or external services",
]

[project]
name = "chainlite"
dynamic = ["version"]
description = "A lightweight chain utility"
authors = [
  { name="Aiden Pearce", email="aiden@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "pydantic-ai", "ai-agent", "prompting", "streaming"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic-ai>=1.46.0,<1.50.0",
  "pydantic-ai-slim[openai,anthropic,google,mistral]>=1.46.0,<1.50.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "loguru>=0.7.0",
  "pyyaml>=6.0",
  "redis>=5.0.0",
  "jinja2>=3.1.6,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/aidenpearce/chainlite"
Repository = "https://github.com/aidenpearce/chainlite"
Issues = "https://github.com/aidenpearce/chainlite/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
chainlite = { path = ".", editable = true }
kaleido = ">=0.2.1"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.10"
pytest = ">=9.0.2,<10"
pytest-asyncio = ">=1.3.0,<2"
pip = ">=24.0"
plotly = ">=6.5.2,<7"
